packages/next-swc/crates/core/tests/errors/react-server-components/server-graph/get-static-props/output.js
export function getStaticProps() {}
export default function() {
    return null;
}
